<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailed_layout"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            style="@style/ThemeOverlay.FirebaseIcon"
            android:contentDescription="@string/desc_firebase_lockup"
            android:src="@drawable/firebase_lockup_400"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:text="@string/fmt_title"
            android:theme="@style/ThemeOverlay.MyTitleText"
            tools:text="Sign in from: apple.com"/>

        <TextView
            android:id="@+id/textUID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fmt_uid"
            android:theme="@style/ThemeOverlay.MyTextDetail"
            tools:text="UID: 123456789abc" />

        <TextView
            android:id="@+id/textDisplayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fmt_display_name"
            android:theme="@style/ThemeOverlay.MyTextDetail"
            tools:text="Display Name: Johnny Walker" />

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fmt_email"
            android:theme="@style/ThemeOverlay.MyTextDetail"
            tools:text="Email: Johnny.Walker@gmail.com" />

        <TextView
            android:id="@+id/textPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fmt_display_name"
            android:theme="@style/ThemeOverlay.MyTextDetail"
            tools:text="Phone Number: 0912345678" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right"
        android:orientation="vertical">

        <Switch
            android:id="@+id/switchFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchPadding="10dp"
            android:text="@string/text_facebook" />

        <Switch
            android:id="@+id/switchGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchPadding="10dp"
            android:text="@string/text_google" />

        <Switch
            android:id="@+id/switchApple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchPadding="10dp"
            android:text="@string/text_apple" />

        <Switch
            android:id="@+id/switchEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchPadding="10dp"
            android:enabled="false"
            android:text="@string/text_email" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sign_out"/>


</LinearLayout>